--- a/style.css
+++ b/style.css
@@ -16,43 +16,54 @@
 }
 
 body {
-    margin: 0%;
-    padding: 0%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
     box-sizing: border-box;
     background-color: rgb(134, 134, 180);
 }
 
-main {
+grid-grid {
+    display: grid;
+    height: 90vh;
+    width: 145vh;
+    align-items: center;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 185px 500px;
     background-color: rgba(146, 146, 146, 0.500);
     border: 6px solid black;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 1300px;
-    height: 770px;
+    
 }
 
-textarea-spaces {
-    display: grid;
-    grid-template-columns:20% 28%;
+grid-item-1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     margin-left: 10px;
     font-weight: 700;
-    justify-items: center;
-    align-items: center;
     border: none;
+
+    & label {
+        display: flex;
+        align-items: center;
+        font-family: Arial, sans-serif;
+        color: #000000;
+        text-transform: uppercase;
+        letter-spacing: 1px;
+        font-size: 22px;
+
+        & span {
+            width: 265px;
+        }
+    }
 }
-label {
-    display: inline-block;
-    text-wrap:nowrap;
-    text-align: right;
-    font-family: Arial, sans-serif;
-    color: #000000;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    font-size: 22px;
-  }
+
+
+
 .texty {
+    flex-grow: 1;
     font-family: "Nexa";
     overflow: hidden;
     margin: 12px;
@@ -65,10 +76,10 @@ label {
     height: 1.4em;
 }
 
-button-stuff {
-    display: grid;
-    grid-template-columns: repeat(3, 0.1fr);
-    /* justify-content: center; */
+grid-item-2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .activator-buttons {
     font-family: "Comforta-Bold";
@@ -100,9 +111,9 @@ button:hover {
     -10px 10px 10px rgba(0, 0, 0, 0.18);
 }
 
-#container {
+grid-item-3 {
+    grid-column: 1/3;
     font-family: "Comforta-Bold";
-    display: flex;
     font-size: 26px;
     text-align: center;
     margin: 10px;
@@ -121,7 +132,7 @@ button:hover {
 .new-element {
     text-align: center;
     font-size: 30px;
-    margin-top: 10px;
+    margin: 12px;
     font-size: 16px;
     padding: 9px;
     border: none;
