--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
     height: 100vh;
     margin: 0;
     box-sizing: border-box;
-    background: linear-gradient(185deg, rgb(0, 0, 0), rgb(39, 60, 60));
+    background: linear-gradient(180deg, rgb(0, 0, 0), rgb(39, 39, 39), rgb(0, 0, 0));
     background-size: 100% 100%;
 }
 
@@ -53,7 +53,7 @@ grid-item-1 {
         display: flex;
         align-items: center;
         font-family: Arial, sans-serif;
-        color: #000000;
+        color: #b4b4b4;
         text-transform: uppercase;
         letter-spacing: 1px;
         font-size: 22px;
