--- a/style.css
+++ b/style.css
@@ -101,20 +101,23 @@ button-container {
     border-radius: 25px 25px;
 }
 
-#input-vocab, #remove-one, #remove-vocab {
+#input-vocab, #remove-one, #remove-vocab { /*sizing*/
     width: 128px;
     height: 70px;
 }
 
-#pick-mode {
+#pick-mode { /*sizing*/
     width: 350px;
     height: 70px;
 }
 
-#timed, #memo-mode, #casual {
-    background: rgba(0, 0, 0, 0.402);
+#timed, #cover, #casual {
+    background: rgba(81, 82, 83, 0.701);
 }
 
+#memo-mode {
+    background: rgb(199, 0, 0);
+}
 
 #close-modal {
     position: absolute;
@@ -139,17 +142,18 @@ button-container {
 
 #casual:hover,
 #timed:hover,
-#memo-mode:hover {
+#cover:hover {
     color: aliceblue;
-    background: rgba(0, 0, 0, 0.640);
+    background: rgba(0, 64, 147, 0.604);
 }
 
+#memo-mode:hover {
+    background: rgb(135, 0, 0);
+}
 
 word-bank {
     justify-self: center;
     grid-column: 1/3;
-    font-family: "Comforta-Bold";
-    font-size: 26px;
     text-align: center;
     margin: 10px;
     padding: 15px;
@@ -157,6 +161,14 @@ word-bank {
     border: 4px solid #ffffffb0;
     border-radius: 10px;
     width: 90%;
+    & p {
+        font-family: "Dreams";
+        font-size: 20px;
+    }
+    & h2 {
+        font-family: "Comforta-Bold";
+        font-size: 30px;
+    }
 }
 
 #words-container {
@@ -202,7 +214,16 @@ word-bank {
     opacity: 0;
     & h2 {
         font-family: "Nexa";
-    } 
+    }
+    & p {
+        font-family: "Dreams";
+        font-weight: 600;
+    }
+    & h3 {
+        margin: 0px;
+        font-family: "Nexa";
+        text-align: left;
+    }
 }
 
 /* Scale-in animation */
@@ -232,7 +253,28 @@ word-bank {
     }
 }
 
+/* opacity animation (specifically for overlay Anims) */
+
+@keyframes opacityI {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+@keyframes opacityO {
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+    }
+}
+
 /* Slide-in animation (alternative to scale) */
+
 @keyframes slideIn {
     0% {
         opacity: 0;
