--- a/style.css
+++ b/style.css
@@ -188,19 +188,22 @@ word-bank {
     background-color: aliceblue;
     transition: box-shadow 0.25s ease;
 }
+button.new-element:hover {
+    cursor: pointer;
+}
 
 /* Dimmed overlay *//* Modal box styling */
 .overlay {
+    display: none; 
     position: fixed;
     top: 0;
     left: 0;
     width: 100vw;
     height: 100vh;
     background-color: rgba(0, 0, 0, 0.5);
-    display: none; 
     justify-content: center;
     align-items: center;
-    z-index: 1000;
+    z-index: 10;
 }
 
 .modal {
@@ -208,10 +211,11 @@ word-bank {
     padding: 20px;
     border-radius: 10px;
     width: 30%;
-    height: 35%;
+    height: 40%;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     text-align: center;
     opacity: 0;
+    z-index: 5;
     & h2 {
         font-family: "Nexa";
     }
@@ -223,6 +227,46 @@ word-bank {
         margin: 0px;
         font-family: "Nexa";
         text-align: left;
+    }
+}
+
+.modal-explanation {
+    background-color: white;
+    padding: 20px;
+    border-radius: 10px;
+    position: fixed;
+    top: 5%;
+    right: 10%;
+    width: 25%;
+    height: 80%;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    text-align: center;
+    opacity: 0;
+    visibility: hidden; 
+    z-index: -2;
+    & h2 {
+        font-family: "Nexa";
+    }
+    & p {
+        font-family: "Dreams";
+        font-weight: 600;
+    }
+    & h3 {
+        margin: 0px;
+        font-family: "Nexa";
+        text-align: left;
+    }
+    & button {
+        margin: 0;
+        width: 3em;
+        height: 2.5em;
+    }
+    & button:hover {
+        background: rgba(81, 82, 83, 0.701); 
+    }
+    & img {
+        width: 100%;
+        height: 100%;
     }
 }
 
@@ -278,25 +322,25 @@ word-bank {
 @keyframes slideIn {
     0% {
         opacity: 0;
-        transform: translateY(-50px);
+        transform: translateX(0);
     }
     50% {
         opacity: 0.88;
-        transform: translateY(10px);
+        transform: translateX(150%);
     }
     100% {
         opacity: 1;
-        transform: translateY(0);
+        transform: translateX(140%);
     }
 }
 
 @keyframes slideOut {
-    from {
+    0% {
         opacity: 1;
-        transform: translateY(-50px);
+        transform: translateX(140%);
     }
-    to {
+    100% {
         opacity: 0;
-        transform: translateY(0);
+        transform: translateX(0);
     }
 }
