--- a/style.css
+++ b/style.css
@@ -22,11 +22,11 @@ body {
     height: 100vh;
     margin: 0;
     box-sizing: border-box;
-    background: rgb(35, 35, 35);
+    background: rgb(128, 56, 154);
     background-size: 100% 100%;
 }
 
-grid-grid {
+main-panel {
     display: grid;
     align-items: center;
     grid-template-columns: 50% 50%;
@@ -203,19 +203,20 @@ button.new-element:hover {
     background-color: rgba(0, 0, 0, 0.5);
     justify-content: center;
     align-items: center;
-    z-index: 10;
+    z-index: 20;
 }
 
 .modal {
     background-color: white;
     padding: 20px;
     border-radius: 10px;
+    position: fixed;
     width: 30%;
     height: 40%;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     text-align: center;
     opacity: 0;
-    z-index: 5;
+    z-index: 25;
     & h2 {
         font-family: "Nexa";
     }
@@ -273,6 +274,49 @@ button.new-element:hover {
     }
 }
 
+flash-cards {
+    position: fixed;
+    display: grid;
+    grid-template-rows: 1fr 3fr;
+
+    scroll-behavior: smooth;
+    overflow: auto;
+
+    font-size: 25px;
+    text-align: center;
+    font-family: "Nexa";
+
+    background-color: rgb(227, 248, 250);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
+    opacity: 0;
+    visibility: hidden;
+
+    padding: 10px;
+    width: 60%;
+    height: 80%;
+    z-index: 30;
+}
+
+modal-text {
+    height: 30%;
+}
+
+modal-container {
+    display: grid;
+}
+
+.flash-card-objects {
+    font-weight: bold;
+    display: flex;
+    font-size: 30px;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(255, 255, 255);
+    padding: 10px;
+    margin: 10px;
+}
 /* Scale-in animation */
 @keyframes scaleIn {
     0% {
