--- a/styles/class.css
+++ b/styles/class.css
@@ -1,51 +1,47 @@
 /*ADD CLASSES HERE*/
 :root {
-    /* --animation-delay: 1s; */
-    --animation-duration: 0.5s;
+    --transition-duration: 0.5s;
 }
 
-body.casual-mode-has-columns modal-container{
-    flex-direction: column;
+/*modal/overlay visibility & invisibility transition handler */
+.modal {
+    transition: transform var(--transition-duration);
+    transform: scale(0.5);
+    position: fixed;
+    padding: 20px;
+    margin: 0px;
+    border-radius: 10px;
+    background-color: white;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    text-align: center;
+    width: 30%;
+    height: 40%;
+    z-index: 25;
+
+    & h2 {
+        font-family: "Nexa";
+    }
+
+    & p {
+        font-family: "Dreams";
+        font-weight: 600;
+    }
+
+    & h3 {
+        margin: 0px;
+        font-family: "Nexa";
+        text-align: left;
+    }
 }
 
-/* hovered classes for explanation */
-body.show-explanation .modal-explanation {
-    visibility: visible;
-    animation: slideIn var(--animation-duration) forwards;
-}
+body.show-modal-visibility {
+    #overlay {
+        display: flex;
+    }
 
-/* click classes for explanation */
-body.remove-explanation-modal .modal-explanation {
-    animation: slideOut var(--animation-duration) forwards;
-}
-
-/* Animation for overlay*/
-body.overlay-visible #overlay{
-    display: flex;
-    animation: opacityI var(--animation-duration) forwards;
-}
-
-body.overlay-disappearing #overlay{
-    display: flex;
-    animation: opacityO var(--animation-duration) forwards;
-}
-
-/* Animation for modal*/
-body.overlay-visible .modal {
-    animation: scaleIn var(--animation-duration) forwards;
-} 
-
-body.overlay-disappearing .modal {
-    animation: 
-    scaleOut var(--animation-duration) forwards, 
-    opacityO var(--animation-duration) forwards;
-}
-
-/* Styles for flash card */
-body.flash-cards-visibility flash-cards {
-    visibility: visible;
-    opacity: 1;
-    animation: scaleIn var(--animation-duration) forwards;
+    .modal {
+        transform: scale(1);
+    }
 }
 
 .flash-card-objects {
