--- a/styles/style.css
+++ b/styles/style.css
@@ -195,7 +195,6 @@ button.new-element:hover {
 }
 
 #overlay {
-    display: none;
     position: fixed;
     top: 0;
     left: 0;
@@ -205,7 +204,34 @@ button.new-element:hover {
     justify-content: center;
     align-items: center;
     z-index: 20;
+}
 
+.modal {
+    position: fixed;
+    padding: 20px;
+    margin: 0px;
+    border-radius: 10px;
+    background-color: white;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    text-align: center;
+    width: 30%;
+    height: 40%;
+    z-index: 25;
+
+    & h2 {
+        font-family: "Nexa";
+    }
+
+    & p {
+        font-family: "Dreams";
+        font-weight: 600;
+    }
+
+    & h3 {
+        margin: 0px;
+        font-family: "Nexa";
+        text-align: left;
+    }
 }
 
 .modal-explanation {
@@ -215,15 +241,12 @@ button.new-element:hover {
     padding: 20px;
     border-radius: 10px;
     position: fixed;
-    top: 1%;
+    top: 0%;
     right: 15%;
-    width: 45%;
-    height: 100%;
+    width: 42%;
+    height: 85%;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     text-align: center;
-    visibility: hidden;
-    opacity: 0;
-    transform: translateX(0%);
 
     & h2 {
         font-family: "Nexa";
@@ -239,21 +262,30 @@ button.new-element:hover {
         font-family: "Nexa";
         text-align: left;
     }
+}
 
-    & button {
-        margin: 0;
-        width: 3em;
-        height: 2.5em;
-    }
+#close-modal-explanation {
+    position: absolute;
+    top: 0%;
+    right: 0%;
+    border-radius: 40% 12px;
+    text-align: center;
+    background: rgb(138, 0, 41);
+    width: 23%;
+    height: 13%;
 
-    & button:hover {
-        background: rgba(81, 82, 83, 0.701);
+    &:hover {
+        background-color: rgb(114, 0, 42);
     }
 
     & img {
-        width: 100%;
-        height: 100%;
+        width: 85%;
+        height: 104%;
     }
+}
+
+#current-mode-explain-name {
+    margin-top: 55px;
 }
 
 flash-cards {
