--- a/styles/style.css
+++ b/styles/style.css
@@ -194,24 +194,12 @@ button.new-element:hover {
     cursor: pointer;
 }
 
-#overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    background-color: rgba(0, 0, 0, 0.5);
-    justify-content: center;
-    align-items: center;
-    z-index: 20;
-}
-
 .modal {
-    position: fixed;
-    padding: 20px;
+    position: relative;
+    padding: 2rem;
     margin: 0px;
-    border-radius: 10px;
-    background-color: white;
+    border-radius: 8px;
+    background: white;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     text-align: center;
     width: 30%;
@@ -242,7 +230,7 @@ button.new-element:hover {
     border-radius: 10px;
     position: fixed;
     top: 0%;
-    right: 15%;
+    right: 20%;
     width: 42%;
     height: 85%;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
@@ -271,8 +259,8 @@ button.new-element:hover {
     border-radius: 40% 12px;
     text-align: center;
     background: rgb(138, 0, 41);
-    width: 23%;
-    height: 13%;
+    width: 17%;
+    height: 11%;
 
     &:hover {
         background-color: rgb(114, 0, 42);
