--- a/styles/class.css
+++ b/styles/class.css
@@ -39,7 +39,7 @@
 /* Added classes & Transitions */
 
 /*modal/overlay visibility & invisibility transition handler */
-body.show-modal-visibility {
+body.modal-pick-mode {
     #overlay {
         opacity: 1;
         visibility: visible;
@@ -53,7 +53,7 @@ body.show-modal-visibility {
 }
 
 /*modal explain visibility & invisibility transition handler */
-body.show-modalExplanation-visibility {
+body.modal-pick-mode-explain {
     .modal-explanation {
         visibility: visible;
         opacity: 1;
@@ -62,6 +62,32 @@ body.show-modalExplanation-visibility {
             opacity var(--transition-duration-short),
             visibility 0s;
     }
+}
+
+/*flash card visibility & invisibility transition handler */
+flash-cards {
+    display: grid;
+    position: fixed;
+    background-color: rgb(227, 248, 250);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
+    padding: 10px;
+    width: 60%;
+    height: 80%;
+    z-index: 130;
+    opacity: 0;
+    visibility: hidden;
+    transform: scale(0.7);
+    transition: transform var(--transition-duration) opacity var(--transition-duration);
+}
+
+body.modal-play-mode flash-cards {
+    opacity: 1;
+    visibility: visible;
+    transform: scale(1);
+    transition: transform var(--transition-duration),
+        opacity var(--transition-duration),
+        visibility 0s;
 }
 
 .flash-card-objects {
