--- a/styles/class.css
+++ b/styles/class.css
@@ -5,7 +5,7 @@
 }
 
 /* overlay & all modals */
-#overlay {
+overlay {
     position: fixed;
     top: 0;
     left: 0;
@@ -40,7 +40,7 @@
 
 /*modal/overlay visibility & invisibility transition handler */
 body.modal-pick-mode {
-    #overlay {
+    overlay {
         opacity: 1;
         visibility: visible;
         transition: opacity var(--transition-duration);
@@ -66,7 +66,6 @@ body.modal-pick-mode-explain {
 
 /*flash card visibility & invisibility transition handler */
 flash-cards {
-    display: grid;
     position: fixed;
     background-color: rgb(227, 248, 250);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
@@ -75,19 +74,25 @@ flash-cards {
     width: 60%;
     height: 80%;
     z-index: 130;
+    display: grid;
     opacity: 0;
     visibility: hidden;
     transform: scale(0.7);
     transition: transform var(--transition-duration) opacity var(--transition-duration);
 }
 
-body.modal-play-mode flash-cards {
-    opacity: 1;
-    visibility: visible;
-    transform: scale(1);
-    transition: transform var(--transition-duration),
-        opacity var(--transition-duration),
-        visibility 0s;
+body.modal-play-mode {
+    overlay {
+        opacity: 1;
+    }
+
+    flash-cards {
+        opacity: 1;
+        visibility: visible;
+        transform: scale(1);
+        transition: transform var(--transition-duration), opacity var(--transition-duration);
+    }
+
 }
 
 .flash-card-objects {
@@ -116,4 +121,36 @@ body.modal-play-mode flash-cards {
     border-radius: 8px 12px;
     background-color: aliceblue;
     transition: box-shadow 0.25s ease;
+}
+
+/* toggle view */
+modal-container {
+    display: flex;
+    flex-flow: row nowrap;
+    justify-items: center;
+    scroll-behavior: smooth;
+    overflow-x: auto;
+}
+
+/* 
+body.casual-mode-has-columns modal-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+} */
+
+
+toggle-style-modes {
+    display: grid;
+    grid-template-columns: 12% auto 5%;
+    grid-template-rows: 0.3fr;
+    font-family: "Nexa";
+    justify-items: start;
+    align-items: center;
+    align-content: center;
+
+    & button#close-flash-card {
+        background: rgb(185, 0, 0);
+        margin: 0;
+        padding: 9px;
+    }
 }
