--- a/styles/class.css
+++ b/styles/class.css
@@ -71,7 +71,7 @@ flash-cards {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     border-radius: 10px;
     padding: 10px;
-    width: 60%;
+    width: 40%;
     height: 80%;
     z-index: 130;
     display: grid;
@@ -95,10 +95,10 @@ body.modal-play-mode {
 
 }
 
-.flash-card-objects {
+.flash-card-object {
+    box-sizing: border-box;
     flex-shrink: 0;
-    scroll-snap-align: center;
-    width: 18em;
+    width: 90%;
     height: 18em;
     font-weight: bold;
     font-size: 30px;
@@ -107,8 +107,8 @@ body.modal-play-mode {
     justify-content: center;
     align-items: center;
     background-color: white;
-    padding: 10px;
-    margin: 10px;
+    margin-right: 10%;
+    margin-left: 5%;
 }
 
 .new-element {
@@ -125,11 +125,11 @@ body.modal-play-mode {
 
 /* toggle view */
 modal-container {
-    display: flex;
+    display: inline-flex;
     flex-flow: row nowrap;
     justify-items: center;
     scroll-behavior: smooth;
-    overflow-x: auto;
+    overflow: auto;
 }
 
 /* 
