--- a/styles/class.css
+++ b/styles/class.css
@@ -71,10 +71,9 @@ flash-cards {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     border-radius: 10px;
     padding: 10px;
-    width: 40%;
-    height: 80%;
-    z-index: 130;
-    display: grid;
+    width: 50vw;
+    height: 50vh;
+    z-index: 100;
     opacity: 0;
     visibility: hidden;
     transform: scale(0.7);
@@ -95,22 +94,6 @@ body.modal-play-mode {
 
 }
 
-.flash-card-object {
-    box-sizing: border-box;
-    flex-shrink: 0;
-    width: 90%;
-    height: 18em;
-    font-weight: bold;
-    font-size: 30px;
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: white;
-    margin-right: 10%;
-    margin-left: 5%;
-}
-
 .new-element {
     font-weight: bold;
     text-align: center;
@@ -123,34 +106,61 @@ body.modal-play-mode {
     transition: box-shadow 0.25s ease;
 }
 
-/* toggle view */
-modal-container {
-    display: inline-flex;
-    flex-flow: row nowrap;
-    justify-items: center;
-    scroll-behavior: smooth;
-    overflow: auto;
+flash-card-container {
+    max-width: 1000px;
+    position: relative;
+    margin: auto;
 }
 
-/* 
-body.casual-mode-has-columns modal-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-} */
+.flash-card-object {
+    display: none;
+    border-radius: 10px;
+    width: auto;
+    height: auto;
+    font-weight: bold;
+    font-size: larger;
+    text-align: center;
+    background-color: white;
+}
 
+.prev,
+.next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    margin-top: -22px;
+    padding: 16px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+}
 
-toggle-style-modes {
-    display: grid;
-    grid-template-columns: 12% auto 5%;
-    grid-template-rows: 0.3fr;
-    font-family: "Nexa";
-    justify-items: start;
-    align-items: center;
-    align-content: center;
+.next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+}
 
-    & button#close-flash-card {
-        background: rgb(185, 0, 0);
-        margin: 0;
-        padding: 9px;
-    }
+.prev:hover,
+.next:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+.dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+}
+
+.active,
+.dot:hover {
+    background-color: #717171;
 }
