--- a/styles/class.css
+++ b/styles/class.css
@@ -108,8 +108,16 @@ body.modal-play-mode {
 
 flash-card-container {
     max-width: 1000px;
+    max-height: 1000px;
     position: relative;
+    width: 100%;
+    height: 80%;
     margin: auto;
+}
+
+flash-card-container.active-container {
+    display: grid;
+    align-items: center;
 }
 
 .flash-card-object {
@@ -119,7 +127,8 @@ flash-card-container {
     align-items: center;
     height: 85%;
     font-weight: bold;
-    font-size: larger;
+    font-family: "Nexa";
+    font-size: 50px;
     text-align: center;
     background-color: white;
 }
