--- a/styles/class.css
+++ b/styles/class.css
@@ -67,11 +67,11 @@ body.modal-pick-mode-explain {
 /*flash card visibility & invisibility transition handler */
 flash-cards {
     position: fixed;
-    background-color: rgb(227, 248, 250);
+    background-color: rgb(88, 136, 139);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     border-radius: 10px;
     padding: 10px;
-    width: 45vw;
+    width: 40vw;
     height: 70vh;
     z-index: 100;
     opacity: 0;
@@ -110,14 +110,17 @@ flash-card-container {
     max-width: 1000px;
     max-height: 1000px;
     position: relative;
+    display: none;
     width: 100%;
-    height: 80%;
+    height: 90%;
     margin: auto;
+
 }
 
 flash-card-container.active-container {
     display: grid;
     align-items: center;
+    overflow: hidden;
 }
 
 .flash-card-object {
@@ -125,12 +128,13 @@ flash-card-container.active-container {
     justify-content: center;
     justify-items: center;
     align-items: center;
-    height: 85%;
+    height: 90%;
     font-weight: bold;
     font-family: "Nexa";
     font-size: 50px;
     text-align: center;
     background-color: white;
+    display: none;
 }
 
 .prev,
@@ -157,20 +161,4 @@ flash-card-container.active-container {
 .prev:hover,
 .next:hover {
     background-color: rgba(105, 105, 105, 0.8);
-}
-
-.dot {
-    cursor: pointer;
-    height: 15px;
-    width: 15px;
-    margin: 0 2px;
-    background-color: #bbb;
-    border-radius: 50%;
-    display: inline-block;
-    transition: background-color 0.6s ease;
-}
-
-.active,
-.dot:hover {
-    background-color: #717171;
 }
