--- a/styles/style.css
+++ b/styles/style.css
@@ -280,13 +280,33 @@ button.new-element:hover {
 }
 
 modal-text {
+    position: relative;
     padding: 0;
     margin: 0;
 
-    & h2 {
+    h2 {
         text-align: center;
-        font-size: 34px;
+        font-size: 37px;
         font-family: "Nexa";
         margin: 0;
     }
+
+    button-close-flash-cards {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        padding: 10px 20px;
+        background-color: #af4c60;
+        color: white;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        text-align: center;
+        font-size: 16px;
+        width: auto;
+    }
+}
+
+button-close-flash-cards:hover {
+    background-color: #af4049;
 }
