--- a/styles/style.css
+++ b/styles/style.css
@@ -302,11 +302,31 @@ modal-text {
         border-radius: 5px;
         cursor: pointer;
         text-align: center;
+        font-family: "Comforta-Bold";
+        font-size: 16px;
+        width: auto;
+    }
+
+    .randomize-cards {
+        position: absolute;
+        top: 10px;
+        left: 10px;
+        padding: 10px 20px;
+        background-color: #af4c60;
+        color: white;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        text-align: center;
+        font-family: "Comforta-Bold";
         font-size: 16px;
         width: auto;
     }
 }
 
-button-close-flash-cards:hover {
+
+
+button-close-flash-cards:hover,
+.randomize-cards:hover {
     background-color: #af4049;
 }
