--- a/styles/class.css
+++ b/styles/class.css
@@ -76,6 +76,8 @@ flash-cards {
     visibility: hidden;
     transform: scale(0.7);
     transition: transform var(--transition-duration), opacity var(--transition-duration), visibility 0s var(--transition-duration);
+
+
 }
 
 body.modal-play-mode {
@@ -117,6 +119,40 @@ flash-card-container {
 
 }
 
+arrow-container {
+
+    .prev,
+    .next {
+        cursor: pointer;
+        position: absolute;
+        top: 50%;
+        width: auto;
+        padding: 16px;
+        margin-left: 10px;
+        margin-right: 10px;
+        color: rgb(0, 0, 0);
+        font-weight: bold;
+        font-size: 28px;
+        transition: 0.2s ease;
+        user-select: none;
+    }
+
+    .prev {
+        left: 0;
+        border-radius: 0 6px 6px 0;
+    }
+
+    .next {
+        right: 0;
+        border-radius: 6px 0 0 6px;
+    }
+
+    .prev:hover,
+    .next:hover {
+        background-color: rgba(105, 105, 105, 0.8);
+    }
+}
+
 flash-card-container.active-container {
     display: grid;
     align-items: center;
@@ -135,30 +171,4 @@ flash-card-container.active-container {
     text-align: center;
     background-color: white;
     display: none;
-}
-
-.prev,
-.next {
-    cursor: pointer;
-    position: absolute;
-    top: 50%;
-    width: auto;
-    margin-top: -35px;
-    padding: 16px;
-    color: rgb(0, 0, 0);
-    font-weight: bold;
-    font-size: 28px;
-    transition: 0.2s ease;
-    border-radius: 0 6px 6px 0;
-    user-select: none;
-}
-
-.next {
-    right: 0;
-    border-radius: 6px 0 0 6px;
-}
-
-.prev:hover,
-.next:hover {
-    background-color: rgba(105, 105, 105, 0.8);
 }
