--- a/styles/style.css
+++ b/styles/style.css
@@ -1,12 +1,3 @@
-:root {
-    color-scheme: light-dark;
-}
-
-.omni-theme {
-    background: light-dark(rgb(255, 247, 226), rgb(28, 28, 28));
-    color: light-dark(black, white);
-}
-
 @font-face {
     font-family: "Comforta-Bold";
     src: url(../Fonts/Comfortaa-Bold.ttf);
@@ -33,72 +24,147 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background: rgb(68, 67, 68);
+    width: 100vw;
+    background: rgb(52, 52, 52);
     background-size: 100% 100%;
 }
 
 main-panel {
     display: grid;
     align-items: center;
-    grid-template-columns: 50% 50%;
-    grid-template-rows: 185px 500px;
-    height: 90vh;
-    width: 145vh;
+    height: 80%;
+    width: 70%;
+    grid-template-columns: auto 60%;
+    grid-template-rows: 100%;
     background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
     backdrop-filter: blur(12px);
-    -webkit-backdrop-filter: blur(12px);
     border-radius: 20px;
     border: 1px solid rgba(255, 255, 255, 0.18);
     box-shadow: 0 8px 32px 0 rgba(255, 255, 255, 0.6);
-}
 
-text-areas {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin-left: 10px;
-    font-weight: 700;
-    border: none;
+    & mini-panel {
+        height: 96%;
+        width: 35%;
+        margin-left: 3%;
+        margin-right: 3%;
+        padding: 8px;
+        background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
+        backdrop-filter: blur(10px);
+        border-radius: 20px;
+        border: 0px solid rgba(255, 255, 255, 0.18);
+        box-shadow: 0 8px 32px 0 rgba(255, 255, 255, 0.3);
 
-    & label {
-        display: flex;
-        align-items: center;
-        font-family: Arial, sans-serif;
-        color: #b4b4b4;
-        text-transform: uppercase;
-        letter-spacing: 1px;
-        font-size: 22px;
+        & content {
+            & h2 {
+                font-family: "Dreams";
+                font-size: 47px;
+            }
 
-        & span {
-            width: 265px;
+            & button-container {
+                display: grid;
+                align-items: center;
+                height: 150px;
+
+                & #pick-mode {
+                    /*sizing*/
+                    width: 350px;
+                    height: 70px;
+                }
+            }
         }
     }
 }
 
-input {
-    flex-grow: 1;
-    font-family: "Nexa";
-    overflow: hidden;
-    margin: 12px;
-    padding: 3px;
-    border: none;
-    border-radius: 10px;
-    resize: none;
-    font-size: 33px;
-    width: 10em;
-    height: 1.4em;
-}
+mini-panel-1 {
+    & text-areas {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        margin-left: 10px;
+        font-weight: 700;
+        border: none;
 
-button-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    height: 150px;
-}
+        & label {
+            display: flex;
+            align-items: center;
+            font-family: Arial, sans-serif;
+            color: #b4b4b4;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            font-size: 22px;
 
-.button-wrapper {
-    display: flex;
-    gap: 10px;
+            & span {
+                width: 265px;
+            }
+
+            & input {
+                flex-grow: 1;
+                font-family: "Nexa";
+                overflow: hidden;
+                margin: 12px;
+                padding: 3px;
+                border: none;
+                border-radius: 10px;
+                resize: none;
+                font-size: 33px;
+                width: 10em;
+                height: 1.4em;
+            }
+        }
+    }
+
+    word-bank {
+        justify-self: center;
+        grid-column: 1/3;
+        text-align: center;
+        margin: 10px;
+        padding: 15px;
+        color: rgb(219, 219, 219);
+        border: 4px solid #ffffffb0;
+        border-radius: 10px;
+        width: 90%;
+
+        & p {
+            font-family: "Dreams";
+            font-size: 20px;
+        }
+
+        & h2 {
+            font-family: "Comforta-Bold";
+            font-size: 30px;
+        }
+
+        shuffle-words,
+        sort-words {
+            position: absolute;
+            padding: 10px 20px;
+            background-color: #ffffff;
+            color: rgb(27, 27, 27);
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            text-align: center;
+            font-family: "Comforta-Bold";
+            font-size: 16px;
+            width: auto;
+            transition: color 0.2s ease, background-color 0.2s ease;
+        }
+
+        shuffle-words {
+            left: 90px;
+        }
+
+        sort-words {
+            left: 200px;
+        }
+
+        shuffle-words:hover,
+        sort-words:hover {
+            color: rgb(0, 0, 0);
+            background-color: rgb(219, 219, 219);
+            transition: color 0.2s ease, background-color 0.2s ease;
+        }
+    }
 }
 
 .activator-buttons {
@@ -114,16 +180,10 @@ button-container {
 
 #input-vocab,
 #remove-one,
-#remove-vocab,
+#remove-all,
 #toggle-visible-style {
     /*sizing*/
     width: 128px;
-    height: 70px;
-}
-
-#pick-mode {
-    /*sizing*/
-    width: 350px;
     height: 70px;
 }
 
@@ -154,7 +214,7 @@ button-container {
 
 #input-vocab:hover,
 #remove-one:hover,
-#remove-vocab:hover,
+#remove-all:hover,
 #pick-mode:hover {
     background: rgba(0, 0, 0, 0.640);
 }
@@ -169,60 +229,6 @@ button-container {
 #memo-mode:hover {
     background: rgb(135, 0, 0);
 }
-
-word-bank {
-    justify-self: center;
-    grid-column: 1/3;
-    text-align: center;
-    margin: 10px;
-    padding: 15px;
-    color: rgb(219, 219, 219);
-    border: 4px solid #ffffffb0;
-    border-radius: 10px;
-    width: 90%;
-
-    & p {
-        font-family: "Dreams";
-        font-size: 20px;
-    }
-
-    & h2 {
-        font-family: "Comforta-Bold";
-        font-size: 30px;
-    }
-
-    shuffle-words,
-    sort-words {
-        position: absolute;
-        padding: 10px 20px;
-        background-color: #ffffff;
-        color: rgb(27, 27, 27);
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-        text-align: center;
-        font-family: "Comforta-Bold";
-        font-size: 16px;
-        width: auto;
-        transition: color 0.2s ease, background-color 0.2s ease;
-    }
-
-    shuffle-words {
-        left: 90px;
-    }
-
-    sort-words {
-        left: 200px;
-    }
-
-    shuffle-words:hover,
-    sort-words:hover {
-        color: rgb(0, 0, 0);
-        background-color: rgb(219, 219, 219);
-        transition: color 0.2s ease, background-color 0.2s ease;
-    }
-}
-
 
 #words-container {
     font-size: 30px;
